# chrdfin

./: .env.example  .gitignore  .prettierignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  README.md  package.json  pnpm-lock.yaml  skills-lock.json  tsconfig.base.json  turbo.json  vitest.workspace.ts
.claude/instructions/: architecture-principles.md  changelog-and-releases.md  code-review.md  coding-standards.md
.claude/public/: prototype.html  technical-blueprint.docx
.github/workflows/: ci.yml
apps/desktop/: eslint.config.js  index.html  package.json  tsconfig.json  vite.config.ts  vitest.config.ts
apps/desktop/src/: App.tsx  globals.css  main.tsx  router.tsx
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: db.rs  error.rs  http.rs  lib.rs  main.rs  schema.sql  secrets.rs  state.rs
apps/desktop/src-tauri/src/commands/: data.rs  mod.rs  sync.rs  system.rs
apps/desktop/src-tauri/src/storage/: assets.rs  dividends.rs  macros.rs  mod.rs  prices.rs  settings.rs  source.rs  splits.rs  sync_log.rs
apps/desktop/src-tauri/src/sync/: error.rs  mod.rs  orchestrator.rs  provider.rs  rate_limit.rs  scheduler.rs  types.rs
apps/desktop/src-tauri/src/sync/massive/: client.rs  dto.rs  limits.rs  mappers.rs  mod.rs
apps/desktop/src-tauri/tests/: commands_data.rs  massive_adapter.rs  massive_live.rs  orchestrator.rs  storage.rs
apps/desktop/src-tauri/tests/fixtures/massive/: aggs_spy_2025-04-01_2025-04-10.json  dividends_aapl_2024.json  inflation_2025-Q1.json  labor_market_2025-Q1.json  market_status.json  rate_limit_429.json  splits_aapl_all.json  ticker_overview_404.json  ticker_overview_aapl.json  tickers_search_apple.json  treasury_yields_2025-04.json
apps/desktop/src/components/dev/: data-layer-card.tsx
apps/desktop/src/components/providers/: theme-provider.tsx
apps/desktop/src/components/shell/: command-palette.tsx  header.tsx  market-status-indicator.tsx  sidebar.tsx  sync-status-badge.tsx
apps/desktop/src/hooks/: use-market-status.ts  use-tauri-command.ts
apps/desktop/src/lib/: queryKeys.test.ts  queryKeys.ts
apps/desktop/src/lib/queries/: market-data.ts  sync.test.ts  sync.ts
apps/desktop/src/routes/: __root.tsx  index.tsx
apps/desktop/src/routes/-shared/: route-states.tsx
apps/desktop/src/routes/analysis/: allocation-optimizer.tsx  backtest.tsx  index.tsx  monte-carlo.tsx  optimizer.tsx  route.tsx
apps/desktop/src/routes/market/: calendar.tsx  index.tsx  news.tsx  options.$symbol.tsx  route.tsx  screener.tsx  ticker.$symbol.tsx
apps/desktop/src/routes/reference/: estate.tsx  index.tsx  options.tsx  retirement.tsx  route.tsx  stocks.tsx  taxes.tsx
apps/desktop/src/routes/tools/: calculators.tsx  compare.tsx  index.tsx  route.tsx
apps/desktop/src/routes/tracking/: index.tsx  portfolio.tsx  route.tsx  transactions.tsx  watchlist.tsx
crates/chrdfin-core/: Cargo.toml
crates/chrdfin-core/src/: backtest.rs  calculators.rs  lib.rs  matrix.rs  monte_carlo.rs  optimizer.rs  portfolio.rs  stats.rs  types.rs
docs/: agent-handoff.md  chart-recipes.md  data-fetching-patterns.md  database-schema-reference.md  form-patterns.md  phase-0-checklist.md  phase-1-checklist.md  route-conventions.md  sync-architecture.md  technical-blueprint.md  type-definitions-reference.md  ui-component-recipes.md  ui-design-system.md
