[workspace]
members = [
    "crates/chrdfin-core",
    "apps/desktop/src-tauri",
]
resolver = "3"

[workspace.package]
edition = "2024"
rust-version = "1.95"
license = "MIT"
authors = ["Chris Thomas <chris.c.thomas@icloud.com>"]
homepage = "https://github.com/chris-c-thomas/chrdfin"
repository = "https://github.com/chris-c-thomas/chrdfin"
readme = "README.md"
keywords = ["finance", "portfolio", "backtest", "monte-carlo", "tauri"]

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
chrono = { version = "0.4", features = ["serde"] }

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
strip = true
