[package]
name = "chrdfin-desktop"
version = "0.0.1"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
keywords.workspace = true
description = "chrdfin desktop application — Tauri v2 backend with embedded DuckDB and the chrdfin-core computation engine."
categories = ["gui", "finance"]
readme = "../../../README.md"
publish = false

[lib]
name = "chrdfin_desktop_lib"
# `staticlib` is intentionally omitted. Tauri v2 desktop builds only need
# `cdylib` (for the dynamic library Tauri loads at runtime) and `rlib` (for
# the binary in `main.rs` to link against). `staticlib` produces a
# multi-hundred-MB `.a` archive that is the largest single artifact in the
# build and was causing CI runners to exhaust disk. Add it back only if a
# specific packaging target genuinely requires a static archive.
crate-type = ["cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
chrdfin-core = { path = "../../../crates/chrdfin-core" }
duckdb = { version = "1", features = ["bundled"] }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
chrono = { workspace = true }
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
# `default-features = false` + `rustls-tls` keeps the build off OpenSSL — matches
# the CI disk-size constraint already in place for the Tauri + DuckDB combo.
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json", "gzip", "stream"] }
url = "2"
async-trait = "0.1"
governor = "0.7"
futures = "0.3"
once_cell = "1"

[dev-dependencies]
# Mocked HTTP for sub-phase 1B's Massive adapter tests.
wiremock = "0.6"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "test-util"] }
